# diablo2-mod-sql

./: README.md  pyproject.toml
src/diablo2_mod_sql/: data.py
src/diablo2_mod_sql/data/: d2string.py  database.py  table.py
src/diablo2_mod_sql/data/d2txt/: column_spec.py
src/diablo2_mod_sql/sql/: operand.py  statement.py
tests/: conftest.py  test_data_d2txt.py  test_data_database.py  test_data_strings.py  test_sql_statement.py
